--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "clean": "ets clean"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^7.2.6",
     "@types/sequelize": "^4.27.14",
     "egg": "^2.6.0",
     "egg-blueprint": "^1.2.0",
+    "egg-jwt": "^3.0.0",
     "egg-scripts": "^2.6.0",
     "egg-sequelize": "^3.1.2",
+    "jsonwebtoken": "^8.2.1",
     "mysql2": "^1.5.3",
     "sequelize": "^4.37.6",
     "sequelize-typescript": "^0.6.3"
