--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jsonwebtoken": "^8.2.1",
     "mysql2": "^1.5.3",
     "sequelize": "^4.37.6",
-    "sequelize-typescript": "^0.6.3"
+    "sequelize-typescript": "^0.6.3",
+    "xml2json": "^0.11.2"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
@@ -60,7 +61,9 @@
     "type": "git",
     "url": ""
   },
-  "eslintIgnore": ["coverage"],
+  "eslintIgnore": [
+    "coverage"
+  ],
   "author": "zhengfang",
   "license": "MIT"
 }
